# minimu9-ahrs

./: CMakeLists.txt  README.md  minimu9-ahrs-calibrate  minimu9-ahrs-calibrator.py  minimu9-ahrs.cpp  package.xml
src/: I2CBus.cpp  LIS3MDL.cpp  LIS3MDL.h  LSM6.cpp  LSM6.h  MinIMU9.cpp  MinIMU9.h  MinIMU9_API.h  minimu9-ahrs.cpp  minimu9-ahrs_bag.cpp
